arreglado el auth de los token con las cookies

--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=rodrigo.verificacion.test@gmail.com
 SMTP_PASS=hrau vuxx dvqc plcc
+SECRET_KEY = "bdeducar"
+
 
 
