--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,15 @@
     "@types/node": "^22.7.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mysql2": "^3.10.1",
-    "nodemailer": "^6.9.16",
     "ejs": "^3.1.10",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "mysql2": "^3.10.1",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
